# mf-dakoker

./: README.md  README.rst  pyproject.toml
dakoker/: pyproject.toml
dakoker/src/: account_manager.py  attendance_manager.py  dakoker.py  mf_driver.py
src/: attendance_manager.py  browser.py  dakoker.py  mf_driver.py
src/utils/: color.py
tests/: test_dakoker.py
