[tool.poetry]
name = "dakoker"
version = "0.1.0"
description = ""
authors = ["nixiesquid <audu817@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
selenium = "^3.141.0"
slackbot = "^0.5.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
