[tool.poetry]
name = "dakoker"
version = "0.1.3"
description = ""
authors = ["nixiesquid <audu817@gmail.com>"]
readme = "README.rst"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
selenium = "^3.141.0"
slackbot = "^0.5.6"
fire = "^0.3.1"
pendulum = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
dakoker = "src.dakoker:main"
